[gd_scene load_steps=11 format=3 uid="uid://43kcivkdyr3i"]

[ext_resource type="Shader" uid="uid://b8s1f03pckj5x" path="res://scripts/flashlight_mask.gdshader" id="1_0xedk"]
[ext_resource type="Texture2D" uid="uid://bmcue6iv54w67" path="res://assets/temp/room_views/kitchen_counter_no_key.png" id="2_ejtxf"]
[ext_resource type="Script" uid="uid://dgjp0rfb6n3eb" path="res://scripts/room_scripts/kitchen_counter_script.gd" id="3_ejtxf"]
[ext_resource type="PackedScene" uid="uid://bwumcsru8q88u" path="res://scenes/clicker_button.tscn" id="3_njkdp"]
[ext_resource type="FontFile" uid="uid://dy5663vj1t44k" path="res://assets/fonts/PixelifySans-Bold.ttf" id="4_4j4tp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0cpwa"]
shader = ExtResource("1_0xedk")
shader_parameter/flashlight_distance = 100.0
shader_parameter/dark_color = Vector4(0, 0.016, 0.071, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0cpwa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ex3ef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ivimn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q23t2"]

[node name="roomTexture" type="TextureRect"]
material = SubResource("ShaderMaterial_0cpwa")
texture = ExtResource("2_ejtxf")
expand_mode = 1
script = ExtResource("3_ejtxf")
metadata/_edit_lock_ = true

[node name="roomButtons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="paperButton" parent="roomButtons" instance=ExtResource("3_njkdp")]
layout_mode = 0
offset_left = 184.0
offset_top = 62.0
offset_right = 461.0
offset_bottom = 320.0
hover_text = "Look at newspaper"
button_id = "look_newspaper"

[node name="coinButton" parent="roomButtons" instance=ExtResource("3_njkdp")]
layout_mode = 0
offset_left = 540.0
offset_top = 273.0
offset_right = 622.0
offset_bottom = 369.0
hover_text = "Take coins"
button_id = "take_kitchen_coins"

[node name="backButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 105.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.8509804, 0.7254902, 0.50980395, 1)
theme_override_colors/font_outline_color = Color(0, 0.015686275, 0.07058824, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_4j4tp")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_0cpwa")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ex3ef")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ivimn")
theme_override_styles/focus = SubResource("StyleBoxEmpty_q23t2")
text = "BACK"
flat = true
